# clusters

./: .gitignore  .mise.toml  .pre-commit-config.yaml  .sops.yaml  README.md  pyproject.toml  renovate.json  requirements.txt
.github/: renovate.json  yamllint.config.yaml
.github/mkdocs/: mkdocs.yaml
.github/renovate/: allowedVersions.json
.github/workflows/: build-documentation.yaml  check-links.yaml  ci.yml  pr-check.yml  update-flux-home.yaml  update-flux-production.yaml  update-flux-staging.yaml  update-k3s-production.yaml
buvisctl/: buvisctl.py
buvisctl/adapters/: __init__.py  response.py
buvisctl/adapters/cilium/: cilium.py
buvisctl/adapters/config/: cilium.py  config.py  flux.py  node.py  (+1 more)
buvisctl/commands/: __init__.py
cluster-home/: .envrc.sample  .mise.toml.sample  Makefile  media-tdarr-config-restore-snapshot
cluster-home/.claude/: settings.local.json
cluster-home/.serena/: project.yml
cluster-home/test-area/: deploy-koolna.bash  teardown-koolna.bash
cluster-office/: .envrc.sample  Makefile
docs/: CNAME  abandoned.md  buvis-network.excalidraw  index.md  installation.md  operations.md
docs/namespaces/: flux-system.md  gtd.md  hajimari.md  kube-system.md  longhorn-system.md  media.md  minio-operator.md  monitoring.md  network.md  openfaas.md  smarthome.md  system-upgrade.md  vpn.md
home/: .envrc.sample  Makefile
office/: .envrc.sample
office/infrastructure/: talconfig.yaml  talenv.sops.yaml
production/: .envrc.sample  Makefile  Makefile-ubuntu
production-old/: Makefile
qa/: Makefile
staging/: .envrc.sample  Makefile
(+706 files in other folders)
